@@ -6,6 +6,8 @@
 
 2008-04-01  Don Porter	<dgp@users.sourceforge.net>
 
+	* generic/tclStubLib.c:	Removed needless #ifdef complexity.
+
 	* generic/tclStubLib.c (Tcl_InitStubs):	Added missing error message.
 	* generic/tclPkg.c (Tcl_PkgInitStubsCheck):
 
